cfail/ui/freeze.stderr
error[E0107]: this struct takes 3 generic arguments but 4 generic arguments were supplied
   --> $DIR/freeze.rs:4:16
    |
4   |     let mut q: Queue<u8, _, _, 4> = Queue::new();
    |                ^^^^^         --- help: remove this generic argument
    |                |
    |                expected 3 generic arguments
    |
note: struct defined here, with 3 generic parameters: `T`, `U`, `N`
   --> $DIR/mod.rs:151:12
    |
151 | pub struct Queue<T, U, const N: usize>
    |            ^^^^^ -  -        -
